--- a/bigbluebutton-html5/private/locales/en.json
+++ b/bigbluebutton-html5/private/locales/en.json
@@ -590,6 +590,7 @@
     "app.video.videoMenuDesc": "Open video menu dropdown",
     "app.video.chromeExtensionError": "You must install",
     "app.video.chromeExtensionErrorLink": "this Chrome extension",
+    "app.video.cameraSoftcapReached": "Camera limit reached ({0})",
     "app.video.stats.title": "Connection Stats",
     "app.video.stats.packetsReceived": "Packets received",
     "app.video.stats.packetsSent": "Packets sent",
