--- a/bigbluebutton-html5/private/locales/pt_BR.json
+++ b/bigbluebutton-html5/private/locales/pt_BR.json
@@ -575,6 +575,7 @@
     "app.video.videoMenuDesc": "Abra o menu de vídeo",
     "app.video.chromeExtensionError": "Você deve instalar o seguinte:",
     "app.video.chromeExtensionErrorLink": "esta extensão do Chrome",
+    "app.video.cameraSoftcapReached": "Limite de câmeras atingido ({0})",
     "app.video.stats.title": "Estatísticas de conexão",
     "app.video.stats.packetsReceived": "Pacotes recebidos",
     "app.video.stats.packetsSent": "Pacotes enviados",
