video: reduce number of gUM calls to one per device (best case scenario)
Shave off the number of gUM calls to 1 when applyConstraints and get(Video)Tracks are supported

Profile switching have their constraints applied via applyConstraints

We don´t call an upfront gUM in video-preview anymore to lift the fingerprinting barrier on the device labels. The flow has been reversed: we call an upfront enumerateDevices, load the first camera in the preview (gUM +1) and then check if our previous enumerate was labelled. If it wasn`t, we`re piggybacking on that first gUM to call enumerateDevices again and enrich our previous list of devices

Add a stream storage in video-preview`s service where streams that are being shared stay put

Make video-provider fetch from the preview`s storage instead of calling gUM again. That was the last overblown gUM we were calling

Remove some unneeded video-preview container props

Improve some of video-preview`s error locales

--- a/bigbluebutton-html5/public/locales/en.json
+++ b/bigbluebutton-html5/public/locales/en.json
@@ -654,12 +654,12 @@
     "app.video.overconstrainedError": "No candidate devices which met the criteria requested",
     "app.video.securityError": "Media support is disabled on the Document",
     "app.video.typeError": "List of constraints specified is empty, or has all constraints set to false",
-    "app.video.notFoundError": "Could not find webcam. Please make sure it's connected",
-    "app.video.notAllowed": "Missing permission for share webcam, please make sure your browser permissions",
-    "app.video.notSupportedError": "Can share webcam video only with safe sources, make sure your SSL certificate is valid",
+    "app.video.notFoundError": "No webcams found. Please make sure there's one connected",
+    "app.video.notAllowed": "Permission to access webcams needs to be granted",
+    "app.video.notSupportedError": "Browser is not supported. Try again using a different browser or device",
     "app.video.notReadableError": "Could not get webcam video. Please make sure another program is not using the webcam ",
     "app.video.timeoutError": "Browser did not respond in time.",
-    "app.video.genericError": "An unknown error has occurred with the device (Error {0})",
+    "app.video.genericError": "An unknown error has occurred with the device ({0})",
     "app.video.mediaFlowTimeout1020": "Media could not reach the server (error 1020)",
     "app.video.suggestWebcamLock": "Enforce lock setting to viewers webcams?",
     "app.video.suggestWebcamLockReason": "(this will improve the stability of the meeting)",
